--- a/package.json
+++ b/package.json
@@ -19,25 +19,28 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@briebug/jest-schematic": "^3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-builders/jest": "11.1.0",
     "@angular-devkit/build-angular": "~0.1102.2",
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
+    "@briebug/cypress-schematic": "^4.4.0",
+    "@cypress/webpack-preprocessor": "5.6.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "26.0.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cypress": "6.5.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest": "26.6.3",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "ts-loader": "8.0.17",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
