--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "search-lagan",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress-run": "ng run search-lagan:cypress-run"
   },
   "private": true,
   "dependencies": {
