--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "cypress-run": "ng run search-lagan:cypress-run"
+    "cypress-run": "ng run search-lagan:cypress-run",
+    "compodoc": "npx compodoc -p tsconfig.app.json src"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
     "@briebug/cypress-schematic": "^4.4.0",
+    "@compodoc/compodoc": "^1.1.11",
     "@cypress/webpack-preprocessor": "5.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/jest": "26.0.20",
